--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,3 +458,9 @@ csmall2 {
 	padding-right: 15px;
 	font-size: 18px;
 }
+
+/*composer*/
+.composerItem{
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
