--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ a:focus {
 ################################################################# */
 
 #headerwrap {
-	background-color: #00b3fe;
+	background-color: #274e5f;
 	min-height: 550px;
 	padding-top: 100px;
 	padding-bottom: 0px;
