--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,14 +8,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{"" | prepend: site.url}}">MOTION SQUARE MUSIC</a>
+                <a class="navbar-brand" href="{{ site.url }}">MOTION SQUARE MUSIC</a>
             </div>
+
             <div class="navbar-collapse collapse navbar-right">
                 <ul class="nav navbar-nav">
                     {% if page.active == "index" %}
-                      <li class="active"><a href="{{"" | prepend: site.url}}">HOME</a></li>
+                      <li class="active"><a href="{{ site.url }}">HOME</a></li>
                     {% else %}
-                      <li><a href="{{"" | prepend: site.url}}">HOME</a></li>
+                      <li><a href="{{ site.url }}">HOME</a></li>
                     {% endif %}                
                     {% if page.active == "about" %}
                       <li class="active"><a href="{{"/about" | prepend: site.url}}">ABOUT</a></li>
