--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,7 @@ a:focus {
 
 /* Testimonials Wrap */
 #twrap {
-	background: url(../img/showcase/show8.jpg) no-repeat center top;
+	background: url(../img/t-back2.jpg) no-repeat center top;
 	margin-top: 0px;
 	padding-top:60px;
 	text-align:center;
@@ -625,3 +625,8 @@ csmall2 {
 	width: 100%;
 	margin: 0 auto;
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+	#blue{
+		margin-top: 100px;
+	}
