change msm head hover to 00b3fe
https://trello.com/c/ivgXfZ8e

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,3 +660,11 @@ csmall2 {
 
 /*inherit-wrapper-height
 	then width auto;*/
+
+/*------------------------------------*\
+	#BOOTSTRAP OVERRIDE
+\*------------------------------------*/
+
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+	color: #00b3fe;
+}
