--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,14 +240,22 @@ a:focus {
 
 /* Portfolio Wrap */
 #portfoliowrap {
+	background: rgba(37, 93, 118, 0.96);
 	padding-top: 60px;
+	padding-bottom: 60px;
 	margin-bottom: 60px;
 	display: block;
 	text-align: center
 }
 
-#portfoliowrap h3 {
+#portfoliowrap>h3 {
 	margin-bottom: 25px;
+	color: #ffffff;
+}
+
+#portfoliowrap>p {
+	margin-bottom: 25px;
+	color: #ffffff;
 }
 
 .portfolio {
@@ -470,6 +478,7 @@ csmall2 {
 .portfolioitem{
     display: inline-block;
     position: relative;
+    border: 1px solid #ffffff;
 }
 
 .portfolioitem a{
