--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-/*	################################################################
+/*  ################################################################
 
-	Original Author: Carlos Alvarez
-	URL: http://alvarez.is
+    Original Author: Carlos Alvarez
+    URL: http://alvarez.is
 
-	Project Name: SOLID - Bootstrap 3 Theme
-	Version: 1.0
-	URL: http://alvarez.is
+    Project Name: SOLID - Bootstrap 3 Theme
+    Version: 1.0
+    URL: http://alvarez.is
 
 ################################################################# */
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,700,900);
@@ -13,53 +13,53 @@
 @import url("prettyPhoto.css") screen;
 @import url("hoverex-all.css") screen;
 
-/*	################################################################
-	1. GENERAL STRUCTURES
+/*  ################################################################
+    1. GENERAL STRUCTURES
 ################################################################# */
-	* {
-		margin: 0;
-		padding: 0px;
-	}
+    * {
+        margin: 0;
+        padding: 0px;
+    }
 
 body {
-	background: #ffffff;
-	margin: 0;
-	height: 100%;
-	color: #384452;
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
-	}
+    background: #ffffff;
+    margin: 0;
+    height: 100%;
+    color: #384452;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 700;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
 }
 
 p {
-	padding: 0;
-	margin-bottom: 12px;
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
-	color: #384452;
-	margin-top: 10px;
+    padding: 0;
+    margin-bottom: 12px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #384452;
+    margin-top: 10px;
 }
 
 img {
-	height: auto;
-	max-width: 100%;
+    height: auto;
+    max-width: 100%;
 }
 
 a {
-	padding: 0;
-	margin: 0;
-	text-decoration: none;
-	-webkit-transition: background-color .4s linear, color .4s linear;
-	-moz-transition: background-color .4s linear, color .4s linear;
-	-o-transition: background-color .4s linear, color .4s linear;
-	-ms-transition: background-color .4s linear, color .4s linear;
-	transition: background-color .4s linear, color .4s linear;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    -webkit-transition: background-color .4s linear, color .4s linear;
+    -moz-transition: background-color .4s linear, color .4s linear;
+    -o-transition: background-color .4s linear, color .4s linear;
+    -ms-transition: background-color .4s linear, color .4s linear;
+    transition: background-color .4s linear, color .4s linear;
 }
 a:hover,
 a:focus {
@@ -68,66 +68,66 @@ a:focus {
 }
 
 ::-moz-selection  {
-	color: #fff;
-	text-shadow:none;
-	background:#2B2E31;
+    color: #fff;
+    text-shadow:none;
+    background:#2B2E31;
 }
 ::selection {
-	color: #fff;
-	text-shadow:none;
-	background:#2B2E31;
+    color: #fff;
+    text-shadow:none;
+    background:#2B2E31;
 }
 
 .centered {
-	text-align: center
+    text-align: center
 }
 
-/*	################################################################
-	BOOTSTRAP MODIFICATIONS & TWEAKS
+/*  ################################################################
+    BOOTSTRAP MODIFICATIONS & TWEAKS
 ################################################################# */
 .navbar {
-	min-height: 70px;
-	padding-top: 10px;
-	margin-bottom: 0px;
+    min-height: 70px;
+    padding-top: 10px;
+    margin-bottom: 0px;
 }
 
 .navbar-brand {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 900;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 900;
 }
 
 .navbar-header .navbar-brand {
-	color: white;
+    color: white;
 }
 
 .navbar-default .navbar-nav > li > a {
-	color: white;
-	font-weight: 700;
-	font-size: 12px;
+    color: white;
+    font-weight: 700;
+    font-size: 12px;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-	color: #00b3fe;
+    color: #00b3fe;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #00b3fe;
-	background-color: transparent;
+    color: #00b3fe;
+    background-color: transparent;
 }
 
 .navbar-default {
-	background-color: rgba(37, 93, 118, 0.96);
-	border-color: transparent;
+    background-color: rgba(37, 93, 118, 0.96);
+    border-color: transparent;
 }
 
 .dropdown-menu {
-	background: #384452;
+    background: #384452;
 }
 
 .dropdown-menu > li > a {
-	color: white;
-	font-weight: 700;
-	font-size: 12px;
+    color: white;
+    font-weight: 700;
+    font-size: 12px;
 }
 
 .btn-theme {
@@ -149,119 +149,119 @@ a:focus {
 .dmbutton:hover,
 .dmbutton:active,
 .dmbutton:focus{
-	color: #ffffff;
-	background-color: #222222;
-	border-color: #ffffff;
+    color: #ffffff;
+    background-color: #222222;
+    border-color: #ffffff;
 }
 .dmbutton {
-	background:rgba(0, 0, 0, 0);
-	border: 1px solid #ffffff;
-	color: #ffffff;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-	padding-top: 1.025rem;
-	padding-right: 2.25rem;
-	letter-spacing:0.85px;
-	padding-bottom: 1.0875rem;
-	padding-left: 2.25rem;
-	font-size: 1.55rem;
-	cursor: pointer;
-	font-weight: normal;
-	line-height: normal;
-	margin: 0 0 1.25rem;
-	text-decoration: none;
-	text-align: center;
-	display: inline-block;
-	-webkit-transition: background-color 300ms ease-out;
-	-moz-transition: background-color 300ms ease-out;
-	transition: background-color 300ms ease-out;
-	-webkit-appearance: none;
-	font-weight: normal !important;
+    background:rgba(0, 0, 0, 0);
+    border: 1px solid #ffffff;
+    color: #ffffff;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    padding-top: 1.025rem;
+    padding-right: 2.25rem;
+    letter-spacing:0.85px;
+    padding-bottom: 1.0875rem;
+    padding-left: 2.25rem;
+    font-size: 1.55rem;
+    cursor: pointer;
+    font-weight: normal;
+    line-height: normal;
+    margin: 0 0 1.25rem;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    -webkit-transition: background-color 300ms ease-out;
+    -moz-transition: background-color 300ms ease-out;
+    transition: background-color 300ms ease-out;
+    -webkit-appearance: none;
+    font-weight: normal !important;
 }
 
 .mtb {
-	margin-top: 80px;
-	margin-bottom: 80px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
 .mb {
-	margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .mt {
-	margin-top: 60px;
+    margin-top: 60px;
 }
 
 .hline {
-	border-bottom: 2px solid #384452;
+    border-bottom: 2px solid #384452;
 }
 
 .hline-w {
-	border-bottom: 2px solid #ffffff;
-	margin-bottom: 25px;
+    border-bottom: 2px solid #ffffff;
+    margin-bottom: 25px;
 }
-/*	################################################################
-	SITE WRAPS
+/*  ################################################################
+    SITE WRAPS
 ################################################################# */
 
 #headerwrap {
-	background-color: #255d76;
-	min-height: 550px;
-	padding-top: 100px;
-	padding-bottom: 0px;
-	text-align: center;
+    background-color: #255d76;
+    min-height: 550px;
+    padding-top: 100px;
+    padding-bottom: 0px;
+    text-align: center;
 }
 
 #headerwrap h3, h5 {
-	color: white;
-	font-weight: 400;
+    color: white;
+    font-weight: 400;
 }
 
 #headerwrap h1 {
-	color: white;
-	margin-bottom: 25px;
+    color: white;
+    margin-bottom: 25px;
 }
 
 #headerwrap .img-responsive {
-	margin: 0 auto;
+    margin: 0 auto;
 }
 
 /* Services Wrap */
 #service {
-	margin-top: 100px;
-	margin-bottom: 80px;
+    margin-top: 100px;
+    margin-bottom: 80px;
 }
 
 #service i {
-	color: #00b3fe;
-	font-size: 60px;
-	padding: 15px;
+    color: #00b3fe;
+    font-size: 60px;
+    padding: 15px;
 }
 
 /* Portfolio Wrap */
 #portfoliowrap {
-	background: rgba(37, 93, 118, 0.96);
-	padding-top: 60px;
-	padding-bottom: 60px;
-	margin-bottom: 60px;
-	display: block;
-	text-align: center
+    background: rgba(37, 93, 118, 0.96);
+    padding-top: 60px;
+    padding-bottom: 60px;
+    margin-bottom: 60px;
+    display: block;
+    text-align: center
 }
 
 #portfoliowrap>h3 {
-	margin-bottom: 25px;
-	color: #ffffff;
+    margin-bottom: 25px;
+    color: #ffffff;
 }
 
 #portfoliowrap>p {
-	margin-bottom: 25px;
-	color: #ffffff;
+    margin-bottom: 25px;
+    color: #ffffff;
 }
 
 .portfolio {
-	padding:0 !important;
-	margin:0 !important;
-	display:block;
+    padding:0 !important;
+    margin:0 !important;
+    display:block;
 }
 
 
@@ -272,38 +272,38 @@ a:focus {
 
 .tpl6 h3
 {
-	color:#fff;
-	margin:0;
-	padding:40px 5px 0;
-	font-size:16px;
-	text-transform:uppercase;
+    color:#fff;
+    margin:0;
+    padding:40px 5px 0;
+    font-size:16px;
+    text-transform:uppercase;
 }
 .tpl6 .dmbutton
 {
-	display:inline-block;
-	margin:30px 5px 20px 5px;
-	font-size:13px;
+    display:inline-block;
+    margin:30px 5px 20px 5px;
+    font-size:13px;
 }
 
 .tpl6 .bg
 {
-	height:100%;
-	width:100%;
-	background-color:#00b3fe;
-	background-color:rgba(0,179,254,.9);
-	text-align:center;
+    height:100%;
+    width:100%;
+    background-color:#00b3fe;
+    background-color:rgba(0,179,254,.9);
+    text-align:center;
 }
 
 /* Testimonials Wrap */
 #twrap {
-	background: url(../img/t-back2.jpg) no-repeat center top;
-	margin-top: 0px;
-	padding-top:60px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 450px;
-	width: 100%;
+    background: url(../img/t-back2.jpg) no-repeat center top;
+    margin-top: 0px;
+    padding-top:60px;
+    text-align:center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 450px;
+    width: 100%;
 
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
@@ -317,106 +317,106 @@ a:focus {
 }
 
 #twrap i {
-	font-size: 50px;
-	color: white;
-	margin-bottom: 25px;
+    font-size: 50px;
+    color: white;
+    margin-bottom: 25px;
 }
 
 #twrap p {
-	color: white;
-	font-size: 15px;
-	line-height: 30px;
+    color: white;
+    font-size: 15px;
+    line-height: 30px;
 }
 
 /* clients logo */
 #cwrap {
-	background: #f7f7f7;
-	margin-top: 0px;
-	padding-top: 80px;
-	padding-bottom: 100px;
+    background: #f7f7f7;
+    margin-top: 0px;
+    padding-top: 80px;
+    padding-bottom: 100px;
 }
 
 #cwrap h3 {
-	margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 /* Footer */
 #footerwrap {
-	padding-top: 60px;
-	padding-bottom: 60px;
-	background: #193745;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background: #193745;
 }
 
 #footerwrap p {
-	color: #bfc9d3;
+    color: #bfc9d3;
 }
 
 #footerwrap h4 {
-	color: white;
+    color: white;
 }
 
 #footerwrap i {
-	font-size: 30px;
-	color: #bfc9d3;
-	padding-right: 25px;
+    font-size: 30px;
+    color: #bfc9d3;
+    padding-right: 25px;
 }
 
 #footerwrap i:hover {
-	color: #00b3fe
+    color: #00b3fe
 }
 
-/*	################################################################
-	PAGE CONFIGURATIONS
+/*  ################################################################
+    PAGE CONFIGURATIONS
 ################################################################# */
 /* General Tweaks */
 
 #blue {
-	background: #00b3fe;
-	margin-top: 60px;
-	margin-bottom: 60px;
-	padding-top: 25px;
-	padding-bottom: 25px;
+    background: #00b3fe;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 #blue h3 {
-	color: white;
-	margin-left: 15px;
+    color: white;
+    margin-left: 15px;
 }
 
 .ctitle {
-	color: #00b3fe;
-	font-weight: 700;
-	margin-bottom: 15px;
+    color: #00b3fe;
+    font-weight: 700;
+    margin-bottom: 15px;
 }
 
 csmall {
-	font-size: 12px;
-	color: #b3b3b3;
+    font-size: 12px;
+    color: #b3b3b3;
 }
 csmall2 {
-	font-size: 12px;
-	color: #f39c12
+    font-size: 12px;
+    color: #f39c12
 }
 
 .spacing {
-	margin-top: 40px;
-	margin-bottom: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .badge-theme {
-	background: #00b3fe;
+    background: #00b3fe;
 }
 
 /* Contact Page */
 #contactwrap {
-	background: url(../img/contact.jpg) no-repeat center top;
-	margin-top: -60px;
-	padding-top:0px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 400px;
-	width: 100%;
+    background: url(../img/contact.jpg) no-repeat center top;
+    margin-top: -60px;
+    padding-top:0px;
+    text-align:center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 400px;
+    width: 100%;
 
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
@@ -431,249 +431,149 @@ csmall2 {
 
 /* Blog Page */
 .popular-posts {
-	margin: 0px;
-	padding-left: 0px;
-	}
+    margin: 0px;
+    padding-left: 0px;
+    }
 
 .popular-posts li {
-	list-style: none;
-	margin-bottom: 20px;
-	min-height: 70px;
+    list-style: none;
+    margin-bottom: 20px;
+    min-height: 70px;
 }
 .popular-posts li a,
 .popular-posts li a:hover {
-	color:#2f2f2f;
-	text-decoration: none;
-	}
+    color:#2f2f2f;
+    text-decoration: none;
+    }
 
 .popular-posts li img {
-	float: left;
-	margin-right: 20px;
-	}
+    float: left;
+    margin-right: 20px;
+    }
 
 .popular-posts li em {
-	font-family: 'Lato', sans-serif;
-	font-size: 12px;
-	color: #b3b3b3
-	}
+    font-family: 'Lato', sans-serif;
+    font-size: 12px;
+    color: #b3b3b3
+    }
 
 .popular-posts p {
-	line-height: normal;
-	margin-bottom: auto;
+    line-height: normal;
+    margin-bottom: auto;
 }
 
 .share i {
-	padding-right: 15px;
-	font-size: 18px;
+    padding-right: 15px;
+    font-size: 18px;
 }
 
 .post-meta{
-	margin-left: 15px; 
+    margin-left: 15px; 
 }
+
+
+
+
 
 /*********************************************
- GRID ITEM: PORTFOLIO GRID
+ GRID ITEM: music collection GRID
 **********************************************/
 
-.portfolioitem{
+.musiccollection{
+    width: 250px;
+    height: 250px;
     display: inline-block;
     position: relative;
-    border: 1px solid #ffffff;
+    border: 1px solid rgba(255,255,255,0.8);
+    overflow: hidden;
 }
 
-.portfolioitem a{
-    color:#ffffff;
+.musiccollection:hover .musiccollection-text{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+
+    line-height: 10;
+    text-align: center;
+    font-size: 24px;
+    color:rgba(37, 93, 118, 0.96);
+
+    background: #ffffff;
+    opacity: .8;
+
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -o-transition: all .5s;
+    -ms-transition: all .5s;
+    transition: all .5s;
 }
 
-.innerdivoverlay {
-	position: absolute;
-	display: none;
-	top: 60px;
-	left: 0;
+    /*********************************************
+    MODAL
+    **********************************************/
 
-	padding: 0 10px 10px 10px;
-	background-color: #00b3fe;
-	z-index: 1;
-}
-
-	/*********************************************
-	MODAL
-	**********************************************/
-
-	#portfolio-modal-infographics,#portfolio-modal-altrock,#portfolio-modal-altrock{
-		display: none;
-	}
-
-
+    #portfolio-modal-infographics,
+    #portfolio-modal-altrock,
+    #portfolio-modal-altrock{
+        display: none;
+    }
 
 
 
 /*------------------------------------*\
-	#MARGIN-PADDING UTILS 
-\*------------------------------------*/
-
-.margin-topbottom {
-	margin-top:     15px;
-	margin-bottom:  15px;
-}
-
-.margin-leftright {
-	margin-left:    15px;
-	margin-right:   15px;
-}
-
-.padding-topbottom {
-	padding-top:     15px;
-	padding-bottom:  15px;
-}
-
-.padding-leftright {
-	padding-left:    15px;
-	padding-right:   15px;
-}
-
-/* Negative margin */
-
-.margin-minus-topbottom {
-	margin-top:     -15px;
-	margin-bottom:  -15px;
-}
-
-.margin-minus-leftright {
-	margin-left:    -15px;
-	margin-right:   -15px;
-}
-
-
-/* Zero padding/margin side (verti/hori) */
-
-.margin-zero-topbottom {
-	margin-top:     0;
-	margin-bottom:  0;
-}
-
-.margin-zero-leftright {
-	margin-left:    0;
-	margin-right:   0;
-}
-
-.padding-zero-topbottom {
-	padding-top:     0;
-	padding-bottom:  0;
-}
-
-.padding-zero-leftright {
-	padding-left:    0;
-	padding-right:   0;
-}
-
-/*Zero padding/margin all side */
-
-.padding-zero-all   {   padding:    0;  }
-.margin-zero-all    {   margin:     0;  }
-
-
-
-
-
-/*------------------------------------*\
-	#POSITIONING & WIDTH-HEIGHT
-\*------------------------------------*/
-
-.fixed          	{   position:   fixed;      }
-.relative       	{   position:   relative;   }
-.absolute       	{   position:   absolute;   }
-
-
-/* Intended to use with absolute positioning */
-
-.position-top   	{   top:    0;  }
-.position-bottom	{   bottom: 0;  }
-.position-right 	{   right:  0;  }
-.position-left  	{   left:   0;  }
-
-
-/* Inheritor for positioning nested elements */
-
-.inherit-min-height {   min-height: inherit;    }
-.inherit-min-width  {   min-width:  inherit;    }
-.inherit-height 	{	height: 	inherit;	}
-.inherit-width		{	width: 		inherit;	}
-
-.min-height-hundredper	{	min-height:	100%	}
-.min-width-hundredper	{	min-width:	100%	}
-.height-hundredper		{	height: 	100%	}
-.width-hundredper		{	width: 		100%	}
-
-
-
-
-
-/*------------------------------------*\
-	#DISPLAY HELPERS
-\*------------------------------------*/
-
-.display-inline-div	{   display:	inline-block;   }
-.display-block		{	display:	block;			}
-
-
-
-
-
-/*------------------------------------*\
-	#CAROUSEL OVERRIDE
+    #CAROUSEL OVERRIDE
 \*------------------------------------*/
 
 #showcase-carousel {
-	width:100%;
-	height:500px;
-	overflow:hidden;
+    width:    100%;
+    height:   500px;
+    overflow: hidden;
 }
 
-.carousel-image	{
-	width: 100%;
-	margin: 0 auto;
+.carousel-image {
+    width:  100%;
+    margin: 0 auto;
 }
 
 /*------------------------------------*\
-	#MEDIA OVERRIDE
+    #MEDIA OVERRIDE
 \*------------------------------------*/
 
 @media (min-width: 768px) and (max-width: 991px) {
-	#blue {
-		margin-top: 100px;
-	}
-}
-
-@media (max-width: 300px) {
-	#blue {
-		margin-top: 100px;
-	}
-}
-@media (max-width: 991px) {
-	#showcase-carousel {
-		max-width:100%;
-		height:inherit;
-		overflow:hidden;
-	}
-
-	.carousel-image	{
-	width: 100%;
-	margin: 0 auto;
-	}
+  #blue {
+      margin-top: 100px;
+  }
 }
 
 @media (max-width: 767px) {
 
 }
 
-/*inherit-wrapper-height
-	then width auto;*/
+@media (max-width: 300px) {
+  #blue {
+      margin-top: 100px;
+  }
+}
+@media (max-width: 991px) {
+  #showcase-carousel {
+      max-width:100%;
+      height:inherit;
+      overflow:hidden;
+  }
+
+  .carousel-image {
+  width: 100%;
+  margin: 0 auto;
+  }
+}
+
 
 /*------------------------------------*\
-	#BOOTSTRAP OVERRIDE
+    #BOOTSTRAP OVERRIDE
 \*------------------------------------*/
 
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-	color: #00b3fe;
+    color: #00b3fe;
 }
