.fa:hover :trollface::trollface::trollface:
experimental :trollface::trollface::trollface:

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -510,6 +510,8 @@ csmall2 {
     transition: all .5s;
 }
 
+
+
     /*********************************************
     MODAL
     **********************************************/
@@ -520,6 +522,21 @@ csmall2 {
         display: none;
     }
 
+
+#service .fa:hover{
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+
+}
 
 
 /*------------------------------------*\
