--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <h4>Contact Us</h4>
                 <div class="hline-w"></div>
-                <a class="btn btn-success" href="mailto:stockmusicth@gmail.com">stockmusicth@gmail.com</a>
+                <a class="btn btn-success" href="mailto:motionsquaremusic.th@gmail.com">motionsquaremusic.th@gmail.com</a>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <h4>Subscribe</h4>
