--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -491,6 +491,19 @@ csmall2 {
 
 
 /*********************************************
+  Laptop
+**********************************************/
+
+.laptop-teaser {margin: 0 50px;}
+.laptop-teaser iframe{
+    border:10px solid #000;
+    border-radius: 20px !important;
+}
+
+
+
+
+/*********************************************
  GRID ITEM: music collection GRID
 **********************************************/
 
@@ -538,9 +551,9 @@ csmall2 {
     }
 
 
-/*------------------------------------*\
+/*********************************************
     #CAROUSEL OVERRIDE
-\*------------------------------------*/
+**********************************************/
 
 #showcase-carousel {
     width:    100%;
@@ -553,9 +566,9 @@ csmall2 {
     margin: 0 auto;
 }
 
-/*------------------------------------*\
+/*********************************************
     #MEDIA OVERRIDE
-\*------------------------------------*/
+**********************************************/
 
 @media (min-width: 768px) and (max-width: 991px) {
   #blue {
@@ -586,9 +599,9 @@ csmall2 {
 }
 
 
-/*------------------------------------*\
+/*********************************************
     #BOOTSTRAP OVERRIDE
-\*------------------------------------*/
+**********************************************/
 
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
   color: #00b3fe;
