change using local to cdn

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 	<title>Motion Square Music - {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="{{ "/assets/css/bootstrap.css" | prepend: site.url }}" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
 	<link href="{{ "/assets/css/style.css"  | prepend: site.url }}" rel="stylesheet">
@@ -29,6 +29,7 @@
 	<link rel="icon" sizes="32x32" type="image/png" href="{{ "/assets/ico/favicon-32x32.png" | prepend: site.url }}" />
 	<link rel="icon" sizes="16x16" type="image/png" href="{{ "/assets/ico/favicon-16x16.png" | prepend: site.url }}" />
 	<link rel="icon" sizes="128x128" type="image/png" href="{{ "/assets/ico/favicon-128.png" | prepend: site.url }}" />
+
 	<meta name="application-name" content="&nbsp;"/>
 	<meta name="msapplication-TileColor" content="#FFFFFF" />
 	<meta name="msapplication-TileImage" content="mstile-144x144.png" />
