--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,21 @@
   <div id="footerwrap">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
                 <h4>Contact Us</h4>
                 <div class="hline-w"></div>
                 <a class="btn btn-success" href="mailto:motionsquaremusic.th@gmail.com">motionsquaremusic.th@gmail.com</a>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                <h4>Social Links</h4>
+		 			<div class="hline-w"></div>
+		 			<p>
+		 				<a href="https://www.facebook.com/pages/Motion-Square-Music/1041806285849455"><i class="fa fa-facebook"></i></a>
+		 				<a href="https://vimeo.com/user39841746"><i class="fa fa-vimeo-square"></i></a> 
+                        <a href="https://www.youtube.com/channel/UCHHw1YTxQGwxZIj6JoBFQ_A"><i class="fa fa-youtube"></i></a>
+		 			</p>
+            </div>
+            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
                 <h4>Subscribe</h4>
                 <div class="hline-w"></div>
                 <div id="mc_embed_signup">
