fix path, head,media resource

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
 
 	<!-- Custom styles for this template -->
 	<link href="{{ "/assets/css/style.css"  | prepend: site.url }}" rel="stylesheet">
+	<link href="{{ "/assets/css/addons.css"  | prepend: site.url }}" rel="stylesheet">
+	<link href="{{ "/assets/css/literallycss.css" | prepend: site.url }}" rel="stylesheet">
 	<link href="{{ "/assets/css/font-awesome.min.css" | prepend: site.url }}" rel="stylesheet">
 	<link href="{{ "/assets/ico/favicon.ico" | prepend: site.url }}" rel="shortcut icon">
 
