--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -1,81 +1,5 @@
 /*********************************************
-  Laptop
-**********************************************/
-
-.laptop-teaser {
-    padding: 0;
-    border:15px solid #000;
-    border-radius: 15px !important;
-}
-
-
-
-
-/*********************************************
- GRID ITEM: music collection GRID
-**********************************************/
-
-.musiccollection{
-    width: 250px;
-    height: 250px;
-    display: inline-block;
-    position: relative;
-    border: 1px solid rgba(255,255,255,0.8);
-    overflow: hidden;
-}
-
-.musiccollection:hover .musiccollection-text{
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-
-    line-height: 10;
-    text-align: center;
-    font-size: 24px;
-    color:rgba(37, 93, 118, 0.96);
-
-    background: #ffffff;
-    opacity: .8;
-
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    -o-transition: all .5s;
-    -ms-transition: all .5s;
-    transition: all .5s;
-}
-
-
-
-    /*********************************************
-    MODAL
-    **********************************************/
-
-    #portfolio-modal-infographics,
-    #portfolio-modal-altrock,
-    #portfolio-modal-altrock{
-        display: none;
-    }
-
-
-/*********************************************
-    #CAROUSEL OVERRIDE
-**********************************************/
-
-#showcase-carousel {
-    width:    100%;
-    height:   500px;
-    overflow: hidden;
-}
-
-.carousel-image {
-    width:  100%;
-    margin: 0 auto;
-}
-
-/*********************************************
-    #MEDIA OVERRIDE
+	Global override
 **********************************************/
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -84,15 +8,13 @@
   }
 }
 
-@media (max-width: 767px) {
-
-}
-
+@media (max-width: 767px) { }
 @media (max-width: 300px) {
   #blue {
     margin-top: 100px;
   }
 }
+
 @media (max-width: 991px) {
   #showcase-carousel {
     max-width:100%;
@@ -107,15 +29,68 @@
 }
 
 
-/*********************************************
-    #BOOTSTRAP OVERRIDE
-**********************************************/
+/* BOOTSTRAP OVERRIDE*/
 
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+.navbar-default .navbar-brand:hover, 
+.navbar-default .navbar-brand:focus {
   color: #00b3fe;
 }
 
+/*********************************************
+	Homepage
+**********************************************/
 
+
+.laptop-teaser {
+  padding: 0;
+  border:15px solid #000;
+  border-radius: 15px !important;
+}
+
+
+/*GRID ITEM: music collection GRID*/
+
+.musiccollection{
+  width: 250px;
+  height: 250px;
+  display: inline-block;
+  position: relative;
+  border: 1px solid rgba(255,255,255,0.8);
+  overflow: hidden;
+}
+
+.musiccollection:hover .musiccollection-text{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  line-height: 10;
+  text-align: center;
+  font-size: 24px;
+  color:rgba(37, 93, 118, 0.96);
+
+  background: #ffffff;
+  opacity: .8;
+
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -o-transition: all .5s;
+  -ms-transition: all .5s;
+  transition: all .5s;
+}
+
+  /* music collection modal*/
+
+  #portfolio-modal-infographics,
+  #portfolio-modal-altrock,
+  #portfolio-modal-altrock{
+      display: none;
+  }
+
+
+/* service icon */
 
 #service i {
     color: #00b3fe;
@@ -138,11 +113,38 @@
   transform: scale(1.2);
 }
 
+
+/*********************************************
+	SHOWCASE
+**********************************************/
+
+
+/* CAROUSEL OVERRIDE */
+
+#showcase-carousel {
+  width:    100%;
+  height:   500px;
+  overflow: hidden;
+}
+
+	.carousel-image {
+    width:  100%;
+    margin: 0 auto;
+	}
+
+
+
+
+
+/*********************************************
+	ABOUTUS
+**********************************************/
+
 .about-imagesrow{
 	
 }
 
-.about-image{
-	
+.about--image{
+	display: inline-block;
 }
 
