--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -17,6 +17,7 @@
 
 .no-padding { padding: 0 !important;  }
 .no-margin  { margin: 0 !important;   }
+.width-fullcontainer { width: 100%;}
 
 
 /* BOOTSTRAP OVERRIDE*/
