--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -77,15 +77,10 @@
     opacity: .8;*/
 
 
-  -webkit-filter: brightness(1.25);
-  -moz-filter: brightness(1.25);
-  filter: brightness(1.25);
+    -webkit-filter: brightness(1.25);
+    -moz-filter: brightness(1.25);
+    filter: brightness(1.25);
   }
-
-
-
-
-
 
     /* music collection modal*/
 
@@ -99,21 +94,24 @@
 /* service icon */
 
 #service i {
-    color: #00b3fe;
-    font-size: 60px;
-    padding: 15px;
+  color: #00b3fe;
+  font-size: 60px;
+  padding: 15px;
+
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  transform: scale(1);
+
+  -webkit-transition: all .2s;
+  -moz-transition: all .2s;
+  transition: all .2s;
 }
 
 
-#service .service-item:hover{
-  -webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -ms-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+#service i:hover{
 
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
-  -ms-transform: scale(1.2);
   transform: scale(1.2);
 }
 
