--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,20 +2,47 @@
 layout: default
 ---
 <div id="blue">
-    <div class="container">
-        <div class="row">
-			<header class="post-header">
-				<h3 class="post-title">{{ page.title }}</h3>
-			    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • By {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  			</header>
-        </div><!-- /row -->
-    </div><!-- /container -->
+  <div class="container">
+    <div class="row">
+      <header class="post-header">
+        <h3 class="post-title">{{ page.title }}</h3>
+        <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • By {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+      </header>
+    </div>
+  </div>
 </div>
 
 <div class="post">
   <article class="post-content">
     <div class="container mtb">
       {{ content }}
+      <!-- New layout -->
+      <div class="hline"></div>
+      <h1>NEW LAYOUT BELOW</h1>
+      <div class="row">
+        <!-- Blog content -->
+        <div class="col-lg-8 col-md-8 col-sm-10 col-xs-12">
+          {{ content }}
+        </div>
+        
+        <!-- Sidebar -->
+        <div class="col-lg-4 col-md-4 col-sm-2 col-xs-12">
+          <aside>
+            <h4>Recent Post</h4>
+              <div class="recent-post">              
+                <ul>
+                {% for post in site.posts limit:3%}
+                  <li>
+                    <a href="{{ post.url | prepend: site.url }}"><h4>{{ post.title }}<br/><small>{{ post.date | date: "%b %-d, %Y" }}{% if post.author %} • {{ post.author }}{% endif %}</small></h4></a>
+                  </li>
+                {% endfor %}
+                </ul>
+              </div>
+            <div class="hline"></div>
+            
+          </aside>
+        </div>
+      </div>
     </div>
   </article>
 
