--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,38 +19,19 @@ layout: default
         <!-- Blog content -->
         <div class="col-lg-8 col-md-8 col-sm-10 col-xs-12">
           {{ content }}
+          <div class="hline"></div>
+          <div class="share-post">
+            <h4>Share this:</h4>
+          </div>
         </div>
         
         <!-- Sidebar -->
         <div class="col-lg-4 col-md-4 col-sm-2 col-xs-12">
           <aside>
-            <!-- Recent Post -->
-            <div class="recent-post">              
-              <h4>Recent Post</h4>
-                <ul>
-                {% for post in site.posts limit:3 %}
-                  <li>
-                    <a href="{{ post.url | prepend: site.url }}"><h4>{{ post.title }}<br/><small>{{ post.date | date: "%b %-d, %Y" }}{% if post.author %} • {{ post.author }}{% endif %}</small></h4></a>
-                  </li>
-                {% endfor %}
-                </ul>
-              </div>
-            <div class="hline"></div>
-            <!-- Popular Tags -->
-            <div class="popular-tags">
-              <h4>Popular Tags</h4>
-
-            </div>
-            <div class="hline"></div>
-            <!-- Share -->
-            <div class="share-post">
-              <h4>Share this</h4>
-            </div>
-            
+            {% include sidebar.html %}
           </aside>
         </div>
       </div>
     </div>
   </article>
-
 </div>
